# opus_prj

./: CMakeLists.txt  input.raw  main.c
opus_interface/: opus_interface.c  opus_interface.h
opus_lib/lib/: libopus.la  libopus.so.0.9.0
opus_lib/lib/pkgconfig/: opus.pc
opus_lib/share/doc/opus/html/: dir_d182b6c3eb64ed9f1e570cbb6c402f9f.html  dir_eb838f8b4bd95a1f7e7a41c5f4090910.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  graph_legend.html  group__opus__ctlvalues.html  group__opus__custom.html  group__opus__decoder.html  group__opus__decoderctls.html  group__opus__encoder.html  group__opus__encoderctls.html  group__opus__errorcodes.html  group__opus__genericctls.html  group__opus__libinfo.html  group__opus__multistream.html  group__opus__multistream__ctls.html  group__opus__repacketizer.html  index.html  modules.html  opus_8h.html  opus_8h_source.html  opus__custom_8h.html  opus__custom_8h_source.html  opus__defines_8h.html  opus__defines_8h_source.html  opus__multistream_8h.html  opus__multistream_8h_source.html  opus__types_8h.html  opus__types_8h_source.html
opus_lib/share/doc/opus/html/search/: all_4.js
opus_lib/share/man/man3/: opus_ctlvalues.3  opus_custom.3  opus_custom.h.3  opus_decoder.3  opus_decoderctls.3  opus_defines.h.3  opus_encoder.3  opus_encoderctls.3  opus_errorcodes.3  opus_genericctls.3  opus_libinfo.3  opus_multistream.3  opus_multistream.h.3  opus_multistream_ctls.3  opus_repacketizer.3  opus_types.h.3
